--- a/blocks/item/__group-icon/item__group-icon.css
+++ b/blocks/item/__group-icon/item__group-icon.css
@@ -1,14 +1,13 @@
-.photo-grid__group-icon {
+.item__group-icon {
   display: flex;
   max-width: 246px;
-  max-height: 23px;
   justify-content: space-between;
-  margin: 25px 15px 31px 21px;
+  margin: 25px 15px 25px 21px;
   align-items: baseline;
 }
 
 @media screen and (max-width: 924px) {
-  .photo-grid__group-icon {
+  .item__group-icon {
   max-width: none;
   }
 }
