--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,16 @@
   padding-top: 45px;
   margin: 0 auto 40px;
   max-width: 880px;
+/*  max-width: 1280px;
+  width: calc(100% - 400px);*/
+
 }
+
+/*@media screen and (max-width: 1280px){
+  .header {
+    width: calc(100% - 400px);
+  }
+}*/
 
 .header:after {
   display: block;
@@ -19,7 +28,6 @@
 
 @media screen and (max-width: 320px) {
   .header {
-    padding: 0;
-    padding-top: 28px;
+    padding: 28px 0 0;
   }
 }
