--- a/blocks/item/__img/item__img.css
+++ b/blocks/item/__img/item__img.css
@@ -1,5 +1,7 @@
-.photo-grid__img {
+.item__img {
   width: 100%;
+  height: 100%;
+  max-height: 282px;
   object-fit:cover;
   display: block;
   border-radius: 10px 10px 0px 0px;
