--- a/blocks/popup/__info/popup__info.css
+++ b/blocks/popup/__info/popup__info.css
@@ -1,20 +1,25 @@
 .popup__info {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  padding: 0;
-  margin: 0 auto 30px;
+  padding: 0 0 13px 0;
+  margin: 0 auto 26px;
   min-width: 358px;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
 }
 
-@media screen and (max-width: 513px) {
-  .popup__info {
-    min-width: 238px;
-  }
+.popup__info:last-of-type {
+  margin: 0 auto 44px;
 }
 
+@media screen and (max-width: 513px) {
+  .popup__info {
+    margin: 0 auto 26px;
+    min-width: 238px;
+  }
+
 .popup__info:last-of-type {
-  margin: 0 auto 48px;
+  margin: 0 auto 40px;
+  }
 }
