--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,13 +2,13 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  max-width: 358px;
-  margin: 34px 36px 54px;
+  max-width: 330px;
+  margin: 34px 36px 48px;
 }
 
 @media screen and (max-width: 513px) {
   .popup__title {
-    margin: 25px auto 75px;
+    margin: 25px 0 75px 22px;
     font-size: 18px;
     line-height: 22px;
   }
