--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,11 +8,9 @@
 }
 
 .popup::before {
-  background-color: #000;
-  opacity: 0.5;
+  background-color: rgb(0, 0, 0, .5);
   position: absolute;
   content: "";
   width: 100%;
   height: 100%;
-
 }
