--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,7 +2,8 @@
   min-width: 150px;
   min-height: 50px;
   background-color: #000;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
+  border-radius: 2px;
   background-image: url('../../../images/add__button.svg');
   background-repeat: no-repeat;
   background-position: center;
