--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,18 +1,23 @@
 .profile__edit-button {
-  min-width: 24px;
-  min-height: 24px;
+  padding: 0;
+  min-width: 23px;
+  min-height: 23px;
   background-image: url('../../../images/Vector.svg');
-  background-color: #000;
+  background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
   border: 1px solid #fff;
   transition: opacity .3s ease-out;
+  background-size: 10px;
 }
 
-@media screen and (max-width:  320px) {
+@media screen and (max-width:  370px) {
   .profile__edit-button {
-  min-width: 18px;
-  min-height: 18px;
+  min-width: 17px;
+  min-height: 17px;
+  max-width: 17px;
+  max-height: 17px;
+  background-size: 7.5px;
   }
 }
 
