--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -4,7 +4,7 @@
   font-size: 18px;
   line-height: 22px;
   color: #fff;
-  max-width: 336px;
+  max-width: 261px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -13,15 +13,14 @@
 
 @media screen and (max-width: 700px) {
   .profile__subtitle {
-  margin: 0 auto 36px;
+  margin: 0 auto 33px 50px;
   }
 }
 
 @media screen and (max-width: 370px) {
   .profile__subtitle {
-  margin-left: 14px;
+  max-width: 196px;
   text-align: center;
-  margin: 0 auto 36px;
   font-size: 14px;
   line-height: 17px;
   }
