--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,10 +1,10 @@
 .profile__title {
-  margin: 0 18px 16px 0;
+  margin: 0;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
   color: #fff;
-  max-width: 294px;
+  max-width: 460px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -12,7 +12,8 @@
 
 @media screen and (max-width: 370px) {
   .profile__title {
-  margin: 0 10px 14px 27px;
+  margin-left: 34px;
+  max-width: 212px;
   font-size: 27px;
   line-height: 33px;
   }
