--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,7 @@
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
-@import url("../blocks/popup/__main/popup__main.css");
+@import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__info/popup__info.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
@@ -19,12 +19,11 @@
 @import url("../blocks/profile/__edit-button/profile__edit-button.css");
 @import url("../blocks/profile/__subtitle/profile__subtitle.css");
 @import url("../blocks/profile/__add-button/profile__add-button.css");
-@import url("../blocks/profile/__title-button/profile__title-button.css");
 @import url("../blocks/photo-grid/photo-grid.css");
-@import url("../blocks/photo-grid/__item/photo-grid__item.css");
-@import url("../blocks/photo-grid/__img/photo-grid__img.css");
-@import url("../blocks/photo-grid/__icon/photo-grid__icon.css");
-@import url("../blocks/photo-grid/__text/photo-grid__text.css");
-@import url("../blocks/photo-grid/__group-icon/photo-grid__group-icon.css");
+@import url("../blocks/item/item.css");
+@import url("../blocks/item/__img/item__img.css");
+@import url("../blocks/item/__icon/item__icon.css");
+@import url("../blocks/item/__text/item__text.css");
+@import url("../blocks/item/__group-icon/item__group-icon.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
