--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,6 +4,12 @@
   margin-bottom: 41px;
 }
 
+@media screen and (max-width: 890px) {
+  .header__logo {
+    margin-left: 19px;
+  }
+}
+
 @media screen and (max-width: 370px) {
   .header__logo {
   max-width: 104px;
