--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,9 +2,9 @@
   padding-top: 45px;
   margin: 0 auto 40px;
   max-width: 880px;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 /*  max-width: 1280px;
   width: calc(100% - 400px);*/
-
 }
 
 /*@media screen and (max-width: 1280px){
@@ -13,20 +13,7 @@
   }
 }*/
 
-.header:after {
-  display: block;
-  content: "";
-  opacity: 0.7;
-  border-bottom: 1px solid #545454;
-}
-
-@media screen and (max-width: 924px) {
-  .header {
-    padding: 45px 19px 0 19px;
-  }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 370px) {
   .header {
     padding: 28px 0 0;
   }
