--- a/blocks/item/__text/item__text.css
+++ b/blocks/item/__text/item__text.css
@@ -5,6 +5,13 @@
   font-size: 24px;
   line-height: 29px;
   text-overflow: ellipsis;
-  white-space: nowrap;
   overflow: hidden;
+  white-space: nowrap;
 }
+
+@media screen and (max-width: 563px){
+  .item__text {
+    max-width: 180px;
+  }
+}
+
