--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -10,6 +10,7 @@
   min-width: 358px;
   margin: 0 auto 37px;
   transition: background-color .3s ease-out;
+  border: 0;
 }
 
 .popup__save-button:hover {
@@ -17,7 +18,7 @@
   background: rgba(0, 0, 0, .8);
 }
 
-@media screen and (max-width: 513px) {
+@media screen and (max-width: 560px) {
   .popup__save-button {
     font-size: 14px;
     line-height: 17px;
