--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,5 @@
 .profile__add-button {
+  padding: 0;
   min-width: 150px;
   min-height: 50px;
   background-color: #000;
@@ -21,7 +22,7 @@
   }
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 400px) {
   .profile__add-button {
   min-width: 282px;
   background-size: 16px 16px;
