--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,11 @@
 .profile__avatar {
-  background-position: center;
-  background-size: cover;
   border-radius: 50%;
   margin-right: 30px;
   width: 120px;
   height: 120px;
-/*  background-image: url('../../../images/avatar.png');*/
+  object-fit: cover;
+  object-position: center;
+
 }
 
 @media screen and (max-width: 700px) 
