--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -10,14 +10,13 @@
   overflow: hidden;
 }
 
-
 @media screen and (max-width: 700px) {
   .profile__subtitle {
-  margin: 0 auto 33px 50px;
+  margin: 0 auto 33px;
   }
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 400px) {
   .profile__subtitle {
   max-width: 196px;
   text-align: center;
@@ -25,4 +24,3 @@
   line-height: 17px;
   }
 }
-
