--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,11 @@
 .popup {
+  visibility: hidden;
+  opacity: 0;
+  z-index: 1;
   position: fixed;
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
   min-width: 100%;
   min-height: 100%;
   background-color: rgb(0, 0, 0, .5);
