--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -11,6 +11,7 @@
   min-height: 32px;
   transition: opacity .3s ease-out;
   background-size: cover;
+  padding: 0;
 }
 
 @media screen and (max-width: 560px) {
