--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,4 +9,5 @@
   min-width: 100%;
   min-height: 100%;
   background-color: rgb(0, 0, 0, .5);
+  transition: visibility 0.3s linear, opacity 0.3s linear;
 }
