--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,10 @@
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__info/popup__info.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
+@import url("../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css");
+@import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__input/_error/popup__input_error_visible.css");
+@import url("../blocks/popup/__input/_type/popup__input_type_error.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/profile/profile.css");
