--- a/blocks/popup/__info/popup__info.css
+++ b/blocks/popup/__info/popup__info.css
@@ -2,7 +2,8 @@
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   padding: 0 0 13px 0;
-  margin: 0 auto 26px;
+  /*margin: 0 auto 26px;*/
+  margin: 0 auto 5px;
   min-width: 358px;
   font-weight: 400;
   font-size: 14px;
@@ -10,16 +11,16 @@
 }
 
 .popup__info:last-of-type {
-  margin: 0 auto 44px;
+  margin: 0 auto 5px;
 }
 
 @media screen and (max-width: 560px) {
   .popup__info {
-    margin: 0 auto 26px;
+    margin: 0 auto 5px;
     min-width: 238px;
   }
 
 .popup__info:last-of-type {
-  margin: 0 auto 40px;
+  margin: 0 auto 5px;
   }
 }
