--- a/blocks/popup/__input/_error/popup__input_error_visible.css
+++ b/blocks/popup/__input/_error/popup__input_error_visible.css
@@ -1,8 +1,10 @@
 .popup__input_error_visible {
   opacity: 1;
-  margin: 0 0 13px 36px;
+  margin: 0 0 0 36px;
 }
-
-.popup__input_error_visible:last-of-type {
-  margin: 0 0 31px 36px;
+@media screen and (max-width: 560px) {
+  .popup__input_error_visible {
+    opacity: 1;
+    margin: 0 0 0 22px;
+  }
 }
