--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,5 @@
 .popup__input {
+  min-height: 43px;
   margin-left: 36px;
   max-width: 358px;
   font-style: normal;
@@ -7,4 +8,14 @@
   line-height: 15px;
   color: #ff0000;
   opacity: 0;
+}
+
+.popup__input:last-of-type {
+  min-height: 46px;
+}
+
+@media screen and (max-width: 560px){
+  .popup__input {
+    max-width: 238px;
+  }
 }
