--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__input/_error/popup__input_error_visible.css");
 @import url("../blocks/popup/__input/_type/popup__input_type_error.css");
+@import url("../blocks/popup/_overlay/popup_overlay_black.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/profile/profile.css");
