--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -22,6 +22,7 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__left-group/profile__left-group.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
+@import url("../blocks/profile/__avatar-image/profile__avatar-image.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__title/profile__title.css");
 @import url("../blocks/profile/__edit-button/profile__edit-button.css");
@@ -34,6 +35,7 @@
 @import url("../blocks/item/__icon/item__icon.css");
 @import url("../blocks/item/__icon/_active/item__icon_active.css");
 @import url("../blocks/item/__text/item__text.css");
+@import url("../blocks/item/__like-container/item__like-container.css");
 @import url("../blocks/item/__group-icon/item__group-icon.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
